[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Levels/Level1/Hall_Bath_Living.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Levels/Level1/Bathroom.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Levels/Level1/Livingroom.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Levels/FoodSpawner.gd" type="Script" id=5]
[ext_resource path="res://Scenes/Levels/HouseControl.gd" type="Script" id=6]

[sub_resource type="NavigationPolygon" id=1]
vertices = PoolVector2Array( 1232.73, 364.731, 1238.95, 325.646, 1363.64, 662.622, 595.041, 657.168, 1156.55, 375.614, 650.588, 385.014, 1119.82, 364.731, 591.883, 626.642, 572.936, 458.223, 404.186, 387.715, 361.359, 465.591, 356.096, 461.38, -102.846, 663.484, -319.941, 668.324, -202.652, 374.287, -128.109, 558.221, -90.2148, 461.38, -162.742, 266.773, 1155.59, 353.172, -810.273, 665.066, -1799.08, 665.065, -1742.88, 436.19, -1689.94, 437.819, 395.02, 648.226, 359.254, 647.694, 1136.39, 48.4854, 1211.88, 252.489, 1155.19, 270.866, 1054.94, 50.1144, -1671.2, 371.029, 1118.46, 317.119, 646.8, 248.146, 1023.18, 4.50217, -1068.47, 120.162, -1066.84, 104.686, -993.537, 102.243, -987.021, 116.089, -882.764, 375.102, -1544.14, 105.501, -1292.46, 107.13, -1290.83, 119.347, -1568.58, 238.265, -1654.91, 285.506, -1272.1, 129.936, -1252.55, 125.049, -1151.55, 115.275, -890.909, 521.713, -1245.22, 104.686, -1153.99, 102.243, 1153.83, 311.677, -844.482, 523.342, -900.683, 473.657, -881.135, 388.134, -63.3722, -0.384857, 0.15918, -1.19937, 35.1829, 48.4854, -948.739, 143.782, -941.408, 145.411, -910.457, 267.587, -959.327, 144.597, 334.921, 4.50217, 403.646, 246.683, 305.599, 59.074, -969.101, 139.71, -974.803, 120.976 )
polygons = [ PoolIntArray( 0, 1, 2 ), PoolIntArray( 0, 2, 3, 4 ), PoolIntArray( 5, 6, 4, 3, 7 ), PoolIntArray( 5, 7, 8 ), PoolIntArray( 9, 5, 8, 10, 11 ), PoolIntArray( 12, 13, 14, 15 ), PoolIntArray( 16, 15, 14, 17 ), PoolIntArray( 6, 18, 4 ), PoolIntArray( 19, 20, 21, 22 ), PoolIntArray( 10, 23, 24, 11 ), PoolIntArray( 25, 26, 27, 28 ), PoolIntArray( 19, 22, 29 ), PoolIntArray( 28, 30, 6, 5, 31, 32 ), PoolIntArray( 33, 34, 35, 36, 37 ), PoolIntArray( 38, 39, 40, 41 ), PoolIntArray( 19, 29, 42, 41, 40, 43 ), PoolIntArray( 19, 43, 44, 45, 46 ), PoolIntArray( 47, 48, 45, 44 ), PoolIntArray( 27, 49, 30, 28 ), PoolIntArray( 46, 50, 19 ), PoolIntArray( 51, 46, 45 ), PoolIntArray( 37, 52, 51, 45, 33 ), PoolIntArray( 17, 53, 54, 55 ), PoolIntArray( 56, 57, 58, 59 ), PoolIntArray( 60, 32, 31, 61, 62 ), PoolIntArray( 17, 55, 62, 61, 9, 11, 16 ), PoolIntArray( 58, 17, 14, 37 ), PoolIntArray( 58, 37, 36, 63 ), PoolIntArray( 36, 64, 63 ), PoolIntArray( 58, 63, 59 ) ]
outlines = [ PoolVector2Array( -1799.08, 665.065, -1742.88, 436.19, -1689.94, 437.819, -1671.2, 371.029, -1654.91, 285.506, -1568.58, 238.265, -1544.14, 105.501, -1292.46, 107.13, -1290.83, 119.347, -1272.1, 129.936, -1252.55, 125.049, -1245.22, 104.686, -1153.99, 102.243, -1151.55, 115.275, -1068.47, 120.162, -1066.84, 104.686, -993.537, 102.243, -987.021, 116.089, -974.803, 120.976, -969.101, 139.71, -959.327, 144.597, -948.739, 143.782, -941.408, 145.411, -910.457, 267.587, -162.742, 266.773, -63.3722, -0.384857, 0.15918, -1.19937, 35.1829, 48.4854, 305.599, 59.074, 334.921, 4.50217, 1023.18, 4.50217, 1054.94, 50.1144, 1136.39, 48.4854, 1211.88, 252.489, 1155.19, 270.866, 1153.83, 311.677, 1118.46, 317.119, 1119.82, 364.731, 1155.59, 353.172, 1156.55, 375.614, 1232.73, 364.731, 1238.95, 325.646, 1363.64, 662.622, 595.041, 657.168, 591.883, 626.642, 572.936, 458.223, 361.359, 465.591, 395.02, 648.226, 359.254, 647.694, 356.096, 461.38, -90.2148, 461.38, -128.109, 558.221, -102.846, 663.484, -319.941, 668.324, -202.652, 374.287, -882.764, 375.102, -881.135, 388.134, -900.683, 473.657, -890.909, 521.713, -844.482, 523.342, -810.273, 665.066 ), PoolVector2Array( 403.646, 246.683, 404.186, 387.715, 650.588, 385.014, 646.8, 248.146 ) ]

[node name="HouseControl" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
script = ExtResource( 6 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Corridors" type="Node2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="Hall_Bath_Living" parent="Corridors" instance=ExtResource( 1 )]

[node name="Rooms" type="Node2D" parent="."]
script = ExtResource( 5 )
__meta__ = {
"_edit_group_": true
}

[node name="Livingroom" parent="Rooms" instance=ExtResource( 3 )]
position = Vector2( 0, 0 )

[node name="Bathroom" parent="Rooms" instance=ExtResource( 2 )]

[node name="Navigation2D" type="Navigation2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance" parent="Navigation2D"]
position = Vector2( -511.63, -299.542 )
navpoly = SubResource( 1 )
[connection signal="body_entered" from="Corridors/Hall_Bath_Living/HallArea2D" to="." method="_on_HallArea2D_body_entered"]
[connection signal="body_entered" from="Rooms/Livingroom/LivingArea2D" to="." method="_on_LivingArea2D_body_entered"]
[connection signal="body_entered" from="Rooms/Bathroom/BathArea2D" to="." method="_on_BathArea2D_body_entered"]

[editable path="Corridors/Hall_Bath_Living"]

[editable path="Rooms/Livingroom"]

[editable path="Rooms/Bathroom"]
